--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,17 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.9.1</version>
             </plugin>
-            
+
+                 <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
+            <configuration>
+                <source>21</source>
+                <target>21</target>
+                <encoding>UTF-8</encoding>
+            </configuration>
+        </plugin>
             
            
         
