--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,8 @@ jobs:
         java-version: '8'
         distribution: 'temurin'
         cache: maven
+    - name: Clean Maven Cache
+      run: mvn clean
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
